TOPSRCDIR=${top_srcdir}
SRCDIR = ..

VERSION = @PACKAGE_VERSION@
MOLECULIZER_DIRNAME = moleculizer-$(VERSION)
libmoleculizer_pythondir=$(includedir)/$(MOLECULIZER_DIRNAME)/python

LIBMOLECULIZER = ../libmoleculizer_1.0.la

LIBMZRPYTHON = ../python/libmoleculizer_python.la
ALL_MZR_LIBS = $(LIBFND) $(LIBUTL) $(LIBMZR) $(LIBSTOCH) $(LIBNMR) $(LIBNMR) $(LIBCPX) $(LIBMOL) $(LIBPLEX) $(LIBDIMER) $(LIBFTR)

LIBXML_CFLAGS = @LIBXML_CFLAGS@
LIBXML_LIBS = @LIBXML_LIBS@

GSL_CFLAGS = @GSL_CFLAGS@
GSL_LIBS = @GSL_LIBS@

PYTHON=@PYTHON@
PYTHON_VERSION=@PYTHON_VERSION@

LIBPYTHON=-lpython$(PYTHON_VERSION)
LIBBOOSTPYTHON=-lboost_python 

AM_CXXFLAGS=@CXXFLAGS@ -Wall $(LIBXML_CFLAGS) $(GSL_CFLAGS) $(PYTHON_INCLUDES) 
AM_LDFLAGS=$(LIBBOOSTPYTHON)

lib_LTLIBRARIES = libmzrpython.la

libmzrpython_la_SOURCES = 
	MoleculizerPythonWrapper.cpp \
	ReactionNetworkGenerator.cpp
