## Process this file with automake to produce Makefile.in.

noinst_LTLIBRARIES = libmoleculizer_cpx.la

VERSION = @INSTALLATION_VERSION@
MOLECULIZER_DIRNAME = libmoleculizer-$(VERSION)
libmoleculizer_cpxdir=$(includedir)/$(MOLECULIZER_DIRNAME)/libmoleculizer/cpx

AM_CXXFLAGS = -Wall 

libmoleculizer_cpx_la_SOURCES =\
basicBndSite.cpp \
cpxXcpt.cpp \
modMolMixin.cpp \
modStateMixin.cpp \
plexIso.cpp \
plexMap.cpp \
siteToShapeMap.cpp

libmoleculizer_cpx_HEADERS=\
alloMol.hpp \
alloMolImpl.hpp \
basicBndSite.hpp \
basicMol.hpp \
basicMolImpl.hpp \
basicPlex.hpp \
basicPlexImpl.hpp \
binding.hpp \
cpxXcpt.hpp \
cxBinding.hpp \
cxBindingImpl.hpp \
cxMol.hpp \
cxMolImpl.hpp \
cxOmni.hpp \
cxOmniImpl.hpp \
cxSite.hpp \
cxSiteImpl.hpp \
ftrSpec.hpp \
hashMolRec.hpp \
hashMolRecImpl.hpp \
isoSearch.hpp \
isoSearchImpl.hpp \
knownBindings.hpp \
modMixinQuery.hpp \
modMol.hpp \
modMolImpl.hpp \
modMolMixin.hpp \
modMolState.hpp \
modMolStateQuery.hpp \
modStateMixin.hpp \
modification.hpp \
molState.hpp \
molStateQuery.hpp \
omniPlex.hpp \
omniPlexFeature.hpp \
omniStructureQuery.hpp \
omniStructureQueryImpl.hpp \
plexFamily.hpp \
plexFamilyImpl.hpp \
plexIso.hpp \
plexIsoImpl.hpp \
plexMap.hpp \
plexMapImpl.hpp \
plexQuery.hpp \
plexQueryImpl.hpp \
plexSpcsMixin.hpp \
plexSpcsMixinCanonicalNamingImpl.hpp \
plexSpcsMixinImpl.hpp \
prm.hpp \
queryAlloList.hpp \
queryAlloListImpl.hpp \
recognizer.hpp \
recognizerImpl.hpp \
reportIsoSearch.hpp \
siteShape.hpp \
siteToShapeMap.hpp \
siteToShapeMapImpl.hpp \
smallMol.hpp \
stateMol.hpp \
structuralBinding.hpp \
subPlexSpec.hpp

