## Process this file with automake to produce Makefile.in.

noinst_LTLIBRARIES = libmoleculizer_fnd.la

VERSION = @INSTALLATION_VERSION@
MOLECULIZER_DIRNAME = libmoleculizer-$(VERSION)
libmoleculizer_fnddir=$(includedir)/$(MOLECULIZER_DIRNAME)/libmoleculizer/fnd

libmoleculizer_fnd_la_SOURCES =\
dumpStream.cc \
fndXcpt.cc \
pchem.cc \
physConst.cc

libmoleculizer_fnd_HEADERS=\
basicDmpColumn.hh \
basicDumpable.hh \
basicReaction.hh \
basicSpecies.hh \
binaryRxnGen.hh \
coreRxnGen.hh \
dmpColumn.hh \
dumpStream.hh \
dumpable.hh \
event.hh \
feature.hh \
featureContext.hh \
featureMap.hh \
featureStimulus.hh \
fndXcpt.hh \
gillspReaction.hh \
massive.hh \
multiSpeciesDumpable.hh \
newContextStimulus.hh \
newSpeciesStimulus.hh \
notifier.hh \
pchem.hh \
physConst.hh \
query.hh \
queryImpl.hh \
querySpeciesDumpable.hh \
reactionNetworkDescription.hh \
reactionNetworkDescriptionImpl.hh \
reactionNetworkComponent.hh \
rxnGen.hh \
sensitive.hh \
sensitiveOnce.hh \
sensitivityList.hh \
stateVar.hh \
varDumpable.hh

